# packio

./: .buildinfo  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.github/workflows/: ci.yml
_sources/: index.rst.txt
docs/: conf.py  index.rst  requirements.txt
docs/.github/workflows/: deploy-docs.yml
packio/: __init__.py  io.py  zip.py
packio.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_io.py  test_packio.py  test_zip.py
