[project]
name = "packio"
version = "0.0.5"
description = "IO for multiple python objects to/from a single file"
authors = [{ name = "Zach Kurtz", email = "zkurtz@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"

[dependency-groups]
dev = [
  "pre-commit >=3.8.0",
  "pyright >=1.1.378",
  "ruff >=0.6.3",
  "pytest >=8.3.2",
  "sphinx>=8.1.3",
  "sphinx-rtd-theme>=3.0.2",
  "pandas>=2.2.3",
  "dummio>=1.1.0",
  "fastparquet>=2024.11.0",
]

[project.urls]
Source = "https://github.com/zkurtz/packio"

[tool.uv]
package = true

[tool.ruff]
line-length = 120

[tool.pyright]
include = ["packio", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
