[project]
name = "packio"
version = "0.1.2"
description = "IO for multiple python objects to/from a single file"
authors = [{ name = "Zach Kurtz", email = "zkurtz@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
  "pre-commit >=3.8.0",
  "pyright >=1.1.378",
  "ruff >=0.6.3",
  "pytest >=8.3.2",
  "sphinx>=8.1.3",
  "sphinx-rtd-theme>=3.0.2",
  "pandas>=2.2.3",
  "dummio>=1.1.0",
  "fastparquet>=2024.11.0",
  "sphinx-autodoc-typehints>=3.0.1",
  "sphinx-autoapi>=3.6.0",
]

[project.urls]
Source = "https://github.com/zkurtz/packio"

[tool.uv]
package = true

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = ["tests"]

[tool.pyright]
# docs: https://github.com/microsoft/pyright/blob/main/docs/configuration.md
typeCheckingMode = "standard" # This is the default, but consider "basic" or "strict" as alternatives at the extremes
include = ["packio", "tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  # ruff defaults:
  "E4", "E7", "E9", "F",
  # additional rule groups:
  "ANN", # require pyright type annotations
  "D", # google-style docstrings
  "E5", # pycodestyle line formatting including line length
  "I", # flake8-import-order
  "TID", # flake8-tidy-imports
]
ignore = [
  "ANN002", # Missing type annotation for *args
  "ANN003", # Missing type annotation for **kwargs
  "ANN401", # Dynamically typed expressions (typing.Any) are disallowed in `**kwargs`
  "D202", # would require one blank line after the last section of a multi-line docstring
  "D203", # would require one blank line at start of class docstring
  "D213", # would require multi-line docstring to start with a hard return
  "D401", # would require imperative mood in docstring
  "D413", # would put blank line at end of each multiline docstring
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"] # would require module-level documentation
"test_*.py" = [
  "ANN201", # would require return type hint (normally None) for test functions
  "D", # would put requirements on docstrings in test files
]
